static/css/default.css
header {
    margin-bottom: 0.5em
}

.homehero {
    position: relative;
    width: 100vw;
    height: 100vh;
    max-width:100%;
    overflow: hidden;
    background-size: cover;
    background:  linear-gradient(
      to bottom,
      rgba(0, 0, 0, 0),
      rgba(0, 0, 0, 0.6)
    );
}


.homehero video {
    position: fixed;
    top: 50%;
    left: 50%;
    min-width: 100%;
    min-height: 100%;
    width: auto;
    height: auto;
    z-index: -100;
    /*-ms-transform: translateX(-50%) translateY(-50%);*/
    /*-moz-transform: translateX(-50%) translateY(-50%);*/
    /*-webkit-transform: translateX(-50%) translateY(-50%);*/
    transform: translateX(-50%) translateY(-50%);
    background: url(/images/drone-image.jpg) no-repeat;
    /*mix-blend-mode: overlay;*/
}

.homehero .homeflex {
    /*position: absolute;*/
    display: flex;
    /*right: 0;*/
    /*bottom: 0;
    /*left: 0;*/
    /*padding: 1rem;*/
    /*text-align: center;*/
    min-height: 100vh;
    flex-direction: column;
}

.homehero .homeflex .filler {
    flex: 1;
}

.homehero h1 {
    text-align: center;
    color: white;
    font-size: 6em;
    margin: 0.2em;

}

nav {
    display: flex;
    flex-flow: row wrap;
    align-items: baseline;
    text-align: center;
    background-color: black;
}

.homehero nav {
    background-color: transparent;
}

nav .item {
    padding: 0;
    flex-grow: 1;
    /*flex: 1;*/
}

nav .logo {
    margin: 0.5em 0 0 0;
    font-size: 1.8em;
    float: left;
    font-weight: bold;
}

.homehero nav .item {
    margin: 1em 1em 1em 1em;
    /*margin: 0em;*/
    flex-grow: 1;
    /*flex: 1;*/
}

nav .item a {
    color: white;
    font-size: 1.5em;
    text-decoration: none;
}

.homehero nav .item a {
    color: white;
    font-size: 3em;
    text-decoration: none;
}

nav .item a:after {
	content: '';
	display: block;
	margin: auto;
	height: 3px;
	width: 0px;
	background: transparent;
	transition: width .5s ease, background-color .5s ease;
}

nav .item a:hover:after {
    width: 100%;
	background: white;
}
.section {
    position: relative;
    background-color: white;
}

article .byline {
    color: #555;
    font-size: 1em;
    font-style: italic;
    margin-bottom: 0.5em;
}


form {
    padding: 0;
}

